binary trace accepted